# wellness-diary2

./: .gitignore  Makefile  README.md  docker-compose.yaml  package-lock.json
api_one/: Cargo.toml
api_one/migrations/2022-07-03-161754_events/: down.sql  up.sql
api_one/src/: main.rs  schema.rs
api_one/src/models/: users.rs
api_one/src/routes/: mod.rs  month.rs  users.rs
api_one/src/schemas/: mod.rs  month.rs  users.rs
api_one/src/utils/: database.rs  diary.rs  mod.rs
wasm_client/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
wasm_client/src/: main.rs
wasm_client/src/components/: dairy.rs  day.rs  day_form.rs  mod.rs
wasm_client/src/core/: client.rs  day.rs  exercise.rs  meal.rs  mental.rs  mod.rs  sleep.rs  work.rs
wasm_client/src/data/: mock_data.JSON
web_client/: Cargo.toml  package-lock.json  package.json  webpack.config.js
web_client/public/sass/: index.scss  variables.scss
web_client/public/sass/mixins/: hero.scss
web_client/public/sass/pages/: home.scss
web_client/public/sass/partials/: footer.scss
web_client/src/: main.rs
web_client/src/routes/: diary.rs  home.rs
web_client/templates/: diary.hbs  footer.hbs  header.hbs  home.hbs  index.hbs  main.hbs
