[package]
name = "api_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenv = "0.15.0"
